# StudentAdministration

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  main.cpp
.github/workflows/: ci.yml  docs.yml
cmake/: RunClangFormat.cmake  StudentAdministrationConfig.cmake.in
src/application/: CMakeLists.txt
src/application/include/student_administration/student_management/application/commands/: RegisterStudentCommand.h
src/application/include/student_administration/student_management/application/dto/: StudentView.h
src/application/include/student_administration/student_management/application/use_cases/: ListStudentsUseCase.h  RegisterStudentUseCase.h
src/application/src/use_cases/: ListStudentsUseCase.cpp  RegisterStudentUseCase.cpp
src/domain/: CMakeLists.txt
src/domain/include/student_administration/student_management/domain/exceptions/: DomainException.h  StudentAlreadyRegistered.h
src/domain/include/student_administration/student_management/domain/model/: Student.h
src/domain/include/student_administration/student_management/domain/repositories/: StudentRepository.h
src/domain/include/student_administration/student_management/domain/value_objects/: EmailAddress.h  StudentId.h  StudentName.h
src/domain/src/exceptions/: DomainException.cpp  StudentAlreadyRegistered.cpp
src/domain/src/model/: Student.cpp
src/domain/src/value_objects/: EmailAddress.cpp  StudentId.cpp  StudentName.cpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/include/student_administration/student_management/infrastructure/persistence/: InMemoryStudentRepository.h
src/infrastructure/src/persistence/: InMemoryStudentRepository.cpp
src/presentation/: CMakeLists.txt
src/presentation/include/student_administration/student_management/presentation/qt/: MainWindow.h
src/presentation/src/qt/: MainWindow.cpp
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt  RegisterStudentUseCaseTests.cpp
tests/domain/: CMakeLists.txt  StudentTests.cpp
tests/infrastructure/: CMakeLists.txt  InMemoryStudentRepositoryTests.cpp
tests/presentation/: CMakeLists.txt  MainWindowTests.cpp
