add_executable(StudentAdministrationInfrastructureTests
    InMemoryStudentRepositoryTests.cpp
)

target_link_libraries(StudentAdministrationInfrastructureTests PRIVATE
    StudentAdministration::Infrastructure
    GTest::gtest_main
)
student_administration_apply_defaults(StudentAdministrationInfrastructureTests)
student_administration_apply_sanitizers(StudentAdministrationInfrastructureTests)
student_administration_apply_clang_tidy(StudentAdministrationInfrastructureTests)

include(GoogleTest)
gtest_discover_tests(StudentAdministrationInfrastructureTests DISCOVERY_MODE PRE_TEST)
